Add wishlist cache refresh after PR creation
- Call cache refresh URL after successful PR creation
- Configurable via cache-url input (defaults to staging)
- Non-blocking - logs warning if refresh fails
- Ready to switch to production URL when needed

--- a/action.yml
+++ b/action.yml
@@ -6,6 +6,10 @@ inputs:
   github-token:
     description: 'GitHub token (PAT from bot account or personal account) with public_repo scope'
     required: true
+  cache-url:
+    description: 'URL to refresh wishlist cache (optional)'
+    required: false
+    default: 'https://urchin-app-bozjb.ondigitalocean.app/api/wishlists?refresh=true'
 
 outputs:
   pr-url:
