Rename to 'Manage Wishlist Actions' to reflect broader scope
- Now manages FUNDING.yml PRs, cache refresh, and future features
- Updated action name, descriptions, and workflow examples
- Better reflects that this is wishlist management automation

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'Manage FUNDING.yml for Wishlist Projects'
-description: 'Automatically creates or updates FUNDING.yml in wishlist projects with wishlist link'
+name: 'Manage Wishlist Actions'
+description: 'Manages wishlist-related automation: FUNDING.yml PRs, cache refresh, and other wishlist tasks'
 author: 'oss-wishlist'
 
 inputs:
