--- a/workflow-template.yml
+++ b/workflow-template.yml
@@ -1,16 +1,20 @@
 # Workflow template for oss-wishlist/wishlists repository
-# Copy this to: .github/workflows/manage-funding-yml.yml
+# Copy this to: .github/workflows/manage-wishlist-actions.yml
 
 name: Manage Wishlist Actions
 
 on:
   issues:
-    types: [opened, labeled]
+    # Run only when labels change to reduce duplicate triggers
+    types: [labeled]
 
 jobs:
   manage-wishlist:
-    # Only run for issues with the 'funding-yml-requested' label
-    if: contains(github.event.issue.labels.*.name, 'funding-yml-requested')
+    concurrency:
+      group: manage-wishlist-${{ github.event.issue.number }}
+      cancel-in-progress: true
+    # Only run for issues that have been approved
+    if: contains(github.event.issue.labels.*.name, 'approved-wishlist')
     runs-on: ubuntu-latest
     
     permissions:
@@ -19,7 +23,7 @@ jobs:
       
     steps:
       - name: Manage Wishlist Actions
-        uses: oss-wishlist/manage-funding-yml@v1
+        uses: oss-wishlist/manage-wishlist-actions@v1
         with:
           # IMPORTANT: Use a PAT with 'public_repo' scope stored in secrets
           # The default GITHUB_TOKEN cannot create PRs in other repositories
